--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Banking Website</title>
+  <title>BEHZAD Banking Website</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Our Bank</h1>
+    <h1>Welcome to BEHZAD Bank</h1>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -43,7 +43,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Your Bank. All rights reserved.</p>
+    <p>&copy; 2023 BEHZAD Bank. All rights reserved.</p>
   </footer>
 </body>
 </html>
